WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111109
REGRESSION(
r142191
): Closed caption buttons no longer appear on non-Mac ports
https://bugs.webkit.org/show_bug.cgi?id=111109
Summary
REGRESSION(r142191): Closed caption buttons no longer appear on non-Mac ports
Andrew Scherkus
Reported
2013-02-28 13:56:10 PST
http://trac.webkit.org/changeset/142191
removed RenderTheme::paintMediaToggleClosedCaptionsButton(RenderObject*, const PaintInfo&, const IntRect&) as the Mac port switched to inlined SVG graphics, however it appears the Efl, Chromium, and Win ports still make use of that method.
Attachments
Patch
(3.40 KB, patch)
2013-02-28 14:43 PST
,
Andrew Scherkus
no flags
Details
Formatted Diff
Diff
Patch
(47.07 KB, patch)
2013-02-28 15:48 PST
,
Andrew Scherkus
no flags
Details
Formatted Diff
Diff
Patch
(47.07 KB, patch)
2013-02-28 15:59 PST
,
Andrew Scherkus
no flags
Details
Formatted Diff
Diff
Patch
(4.43 KB, patch)
2013-03-04 17:45 PST
,
Andrew Scherkus
eric.carlson
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Andrew Scherkus
Comment 1
2013-02-28 14:43:02 PST
Created
attachment 190813
[details]
Patch
Eric Carlson
Comment 2
2013-02-28 14:46:54 PST
Comment on
attachment 190813
[details]
Patch You are missing a LayoutTests/ChangeLog entry, test results, and test expectations.
Andrew Scherkus
Comment 3
2013-02-28 14:48:05 PST
I looked through the existing set of layout tests and it doesn't look like we have a pixel test that cover the controls-with-captions case that would have caught this regression (please correct me if I'm wrong!) I'll fix the ChangeLog bit, but what's the preferred method for landing a layout test requiring pixel results for each port?
WebKit Review Bot
Comment 4
2013-02-28 15:40:12 PST
Comment on
attachment 190813
[details]
Patch
Attachment 190813
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://webkit-commit-queue.appspot.com/results/16849189
New failing tests: media/controls-captions.html media/track/track-cue-rendering-horizontal.html
Andrew Scherkus
Comment 5
2013-02-28 15:48:42 PST
Created
attachment 190827
[details]
Patch
Andrew Scherkus
Comment 6
2013-02-28 15:52:35 PST
Test added for chromium-linux. Seeing as I don't own a machine for each port I'll rebaseline as new results are generated after landing.
WebKit Review Bot
Comment 7
2013-02-28 15:56:40 PST
Attachment 190827
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/media/controls-captions.html', u'LayoutTests/platform/chromium-linux/media/controls-captions-expected.png', u'LayoutTests/platform/chromium-linux/media/controls-captions-expected.txt', u'Source/WebCore/ChangeLog', u'Source/WebCore/rendering/RenderTheme.cpp', u'Source/WebCore/rendering/RenderTheme.h']" exit_code: 1 LayoutTests/platform/chromium-linux/media/controls-captions-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andrew Scherkus
Comment 8
2013-02-28 15:59:04 PST
Created
attachment 190830
[details]
Patch
WebKit Review Bot
Comment 9
2013-02-28 16:02:21 PST
Attachment 190830
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/media/controls-captions.html', u'LayoutTests/platform/chromium-linux/media/controls-captions-expected.png', u'LayoutTests/platform/chromium-linux/media/controls-captions-expected.txt', u'Source/WebCore/ChangeLog', u'Source/WebCore/rendering/RenderTheme.cpp', u'Source/WebCore/rendering/RenderTheme.h']" exit_code: 1 LayoutTests/platform/chromium-linux/media/controls-captions-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 10
2013-02-28 17:20:26 PST
Comment on
attachment 190830
[details]
Patch
Attachment 190830
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://webkit-commit-queue.appspot.com/results/16863093
New failing tests: media/track/track-cue-rendering-horizontal.html media/track/track-cue-rendering-vertical.html
WebKit Review Bot
Comment 11
2013-02-28 17:56:48 PST
Comment on
attachment 190830
[details]
Patch
Attachment 190830
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://webkit-commit-queue.appspot.com/results/16810303
New failing tests: media/track/track-cue-rendering-horizontal.html media/track/track-cue-rendering-vertical.html
Build Bot
Comment 12
2013-02-28 18:10:33 PST
Comment on
attachment 190830
[details]
Patch
Attachment 190830
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-commit-queue.appspot.com/results/16815219
New failing tests: media/controls-captions.html
Andrew Scherkus
Comment 13
2013-03-04 17:45:09 PST
Created
attachment 191365
[details]
Patch
Andrew Scherkus
Comment 14
2013-03-04 17:46:13 PST
Silly me. Turns out there are existing tests that cover this situation. The sad bit is they currently have the incorrect baseline :( Please take another look.
Eric Carlson
Comment 15
2013-03-04 18:09:52 PST
It looks like you need to rebase your patch.
Andrew Scherkus
Comment 16
2013-03-04 18:14:20 PST
Crud. I just rebased it -- I guess not enough :~( Thanks for the heads up.
WebKit Review Bot
Comment 17
2013-03-04 21:00:36 PST
Comment on
attachment 191365
[details]
Patch Rejecting
attachment 191365
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=gce-cq-04', 'apply-attachment', '--no-update', '--non-interactive', 191365, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: /rendering/RenderTheme.cpp patching file Source/WebCore/rendering/RenderTheme.h patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/chromium/TestExpectations Hunk #1 FAILED at 4437. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/chromium/TestExpectations.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', '--force', '--reviewer', 'Eric Carlson']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://webkit-commit-queue.appspot.com/results/16988064
Andrew Scherkus
Comment 18
2013-03-05 11:40:12 PST
Committed
r144789
: <
http://trac.webkit.org/changeset/144789
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug