REGRESSION(r142191): Fix closed caption buttons for ports still using the painting path. https://bugs.webkit.org/show_bug.cgi?id=111109

Reviewed by Eric Carlson.

Source/WebCore:

Covered by following tests:
media/track/track-cue-rendering-horizontal.html
media/track/track-cue-rendering-vertical.html

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paint):
* rendering/RenderTheme.h:
(WebCore::RenderTheme::paintMediaToggleClosedCaptionsButton):

LayoutTests:

* platform/chromium/TestExpectations:

Canonical link: https://commits.webkit.org/129816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144789 268f45cc-cd09-0410-ab3c-d52691b4dbfc