Source/WebCore/rendering/RenderTheme.cpp
@@ -341,6 +341,8 @@ bool RenderTheme::paint(RenderObject* o, const PaintInfo& paintInfo, const IntRe
         return paintMediaRewindButton(o, paintInfo, r);
     case MediaReturnToRealtimeButtonPart:
         return paintMediaReturnToRealtimeButton(o, paintInfo, r);
+    case MediaToggleClosedCaptionsButtonPart:
+        return paintMediaToggleClosedCaptionsButton(o, paintInfo, r);
     case MediaSliderPart:
         return paintMediaSliderTrack(o, paintInfo, r);
     case MediaSliderThumbPart:
